--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "copy-text-to-clipboard": "^3.0.1",
-    "next": "12.0.7",
+    "next": "^12.0.8",
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
